mobile visibility fix

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
   margin: 0;
-  overflow: hidden;
+  min-width: 350px;
 }
 
 h1 {
@@ -94,11 +94,11 @@ li img {
 }
 
 .email:hover::placeholder {
-  transform: translateX(5em);
+  transform: translateX(25%);
 }
 
 .email:focus::placeholder{
-  transform: translateX(30em);
+  transform: translateX(110%);
 }
 
 label {
